fix bootJar, clean JDBC option list