@@ -1,6 +1,3 @@
-import java.nio.file.Files
-import java.nio.file.Paths
-
 plugins {
     id 'taack-grails-webapp'
 }
@@ -8,7 +5,6 @@ plugins {
 application {
     mainClass.set("taack.website.Application")
 }
-
 
 bootRun {
     ignoreExitValue true
@@ -22,8 +18,19 @@ bootRun {
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
 }
 
+bootJar {
+    enabled = true
+
+    manifest {
+        attributes["Add-Opens"] = "java.base/java.io java.base/sun.nio.ch"
+    }
+}
+
+
 grails {
     exploded = true
+    pathingJar = false
+
     plugins {
         gradle.ext.taackPlugins.each {
             implementation project(':' + it)
